--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -21,7 +21,7 @@
     });
     // Configurer les options du graphique en ligne
     var options = {
-          title: 'test',
+          title: 'Mon Histogramme',
           curveType: 'function',
           legend: { position: 'bottom' },
         };
